# eecs600_2015_Alpha

./: README.md~  eecs600AlphaREADME.md  eecs600AlphaREADMERobot.md
cwru_pcl_utils/: cwru_pcl_utils.cpp  cwru_pcl_utils.h
kristina_hmi/: CMakeLists.txt  CMakeLists.txt~  Readme.md  package.xml
kristina_hmi/src/: hand_detect_client.cpp  hand_detect_publisher.cpp  hand_detect_server.cpp  image_listener.cpp
marc_gripper/: CMakeLists.txt  Readme.md  Readmer.md  package.xml
marc_gripper/src/: gripper_cmd_subscriber.cpp  gripper_motor_node.cpp
marc_gripper/src/dxl_c_files/: ReadWrite.c
rahul_motion/: CMakeLists.txt  Readme.md  package.xml  ps8_eecs600README.md
rahul_motion/cwru_pcl_utils/: cwru_pcl_utils.cpp  cwru_pcl_utils.h
rahul_motion/include/cwru_pcl_utils/: cwru_pcl_utils.h~  ps8_eecs600_baxter_cart_move_action_client.h~  ps8_eecs600_baxter_cart_move_lib.h~
rahul_motion/include/eecs600_alpha_pcl_utils/: eecs_600_rahul.h  eecs_600_rahul.h~
rahul_motion/launch/: rahul_motion.launch  rahul_motion.launch~  rahul_motion_robot.launch  rahul_motion_robot.launch~  rahul_motion_robot_trimmed.launch  rahul_motion_robot_trimmed.launch~
rahul_motion/src/: baxter_cart_move_lib.cpp  cwru_pcl_utils.cpp  cwru_pcl_utils_example_main.cpp~  eecs_600_rahul.cpp  eecs_600_rahul.cpp~  eecs_600_rahul_robot.cpp  ps7_eecs_600_rahul.cpp  ps8_eecs600_baxter_cart_move_action_client.cpp~  ps8_eecs_600_rahul.cpp~
tom_pcl_util/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
tom_pcl_util/include/: blockfinder.h  blockfinder.h~
tom_pcl_util/src/: blockfinder.cpp  blockfinder.cpp~  test_two.cpp  testy_gewgaw.cpp~
